--- a/index.html
+++ b/index.html
@@ -1,15 +1,88 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>My GitHub Page</title>
-  <meta charset="UTF-8">
   <style>
-    body { font-family: Arial, sans-serif; text-align: center; margin-top: 100px; }
-    h1 { color: #2c3e50; }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f6f8;
+      color: #333;
+    }
+    header {
+      background-color: #2c3e50;
+      color: white;
+      padding: 2rem;
+      text-align: center;
+    }
+    section {
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
+    }
+    h2 {
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 0.5rem;
+      margin-bottom: 1rem;
+    }
+    .skills ul {
+      list-style: none;
+      padding: 0;
+    }
+    .skills li {
+      background-color: #ecf0f1;
+      margin: 0.5rem 0;
+      padding: 0.5rem 1rem;
+      border-radius: 5px;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background-color: #eee;
+      font-size: 0.9rem;
+      margin-top: 3rem;
+    }
   </style>
 </head>
 <body>
-  <h1>Hello, World!</h1>
-  <p>This is my first website hosted with GitHub Pages.</p>
+  <header>
+    <h1>Hello! 👋 I'm a Self-Learner</h1>
+    <p>Trying, growing, and building — one step at a time.</p>
+  </header>
+
+  <section>
+    <h2>About Me</h2>
+    <p>
+      I'm currently working full-time in IT support, with hands-on experience in helpdesk operations,
+      user access control, and hospitality technology including PMS, POS, and Booking Engine tools.
+    </p>
+    <p>
+      Outside of work, I'm learning Python from scratch and building better habits to achieve personal and financial stability.
+    </p>
+  </section>
+
+  <section class="skills">
+    <h2>Skills & Interests</h2>
+    <ul>
+      <li>IT Support & Helpdesk Operations</li>
+      <li>Python (Beginner Level)</li>
+      <li>System Admin Basics</li>
+      <li>Time & Habit Management</li>
+      <li>Personal Projects and Growth</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Contact</h2>
+    <p>📧 Email: <em>yourname@example.com</em></p>
+    <p>🌐 GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
+  </section>
+
+  <footer>
+    &copy; 2025 - Made with patience and progress ✨
+  </footer>
 </body>
 </html>
