--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@
     <h2>Contact</h2>
     <p>📧 Email: <em>yourname@example.com</em></p>
     <p>🌐 GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
+    
+    <!-- Add a button that redirects to another page -->
+    <button onclick="window.location.href='https://www.example.com';">Go to Another Page</button>
   </section>
 
   <footer>
